[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/EnemyDeathEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.67111
height = 2.8686

[sub_resource type="CircleShape2D" id=9]
radius = 55.0

[node name="Bat" type="KinematicBody2D"]
scale = Vector2( 1, 0.994072 )
collision_layer = 16
script = ExtResource( 4 )
BatEffect = ExtResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.00676, 1 )
frames = SubResource( 6 )
animation = "Fly"
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 0 )
collision_layer = 8
withHitEffect = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -11.92 )
shape = SubResource( 8 )

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
modulate = Color( 1, 1, 1, 0.152941 )
shape = SubResource( 9 )
[connection signal="damaged" from="Stats" to="." method="_on_Stats_damaged"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionArea"]
